# api/api.yaml
@@ -1,7 +1,7 @@
 openapi: "3.0.3"
 info:
   title: Shopping Cart API
-  version: "1.0"
+  version: "1.0.0"
   description: API for managing shopping carts
   contact:
     name: Mohammad Anang
@@ -10,128 +10,136 @@ info:
 tags:
   - name: Cart
     description: Operations related to shopping carts
-  - name: Order
-    description: Operations related to orders
+  # - name: Order
+  #   description: Operations related to orders
+  # - name: Payment
+  #   description: Operations related to payments (with payment gateways)
+
+servers:
+  - url: http://localhost:8080/api
+    description: Local development server
+  # - url: https://example.com/api
+  #   description: Production server
 
 paths:
-  /order:
-    post:
-      tags:
-        - Order
-      summary: Add a new order
-      description: Adds a new order to the system.
-      operationId: AddOrder
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/OrderCreateInput"
-      responses:
-        "201":
-          description: Order created
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/OrderSuccessResponse"
-        "500":
-          description: Failed to add order
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-    get:
-      tags:
-        - Order
-      summary: List all orders
-      description: Retrieves a list of all orders.
-      parameters:
-        - $ref: "#/components/parameters/PageParam"
-        - $ref: "#/components/parameters/SizeParam"
-        - $ref: "#/components/parameters/OrderNumberParam"
-      operationId: ListOrders
-      responses:
-        "200":
-          description: All orders
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/OrderPaginateSuccessResponse"
-        "500":
-          description: Failed to retrieve orders
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-        "404":
-          description: Data not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-  /order/{id}:
-    get:
-      tags:
-        - Order
-      summary: Detail an order
-      description: Retrieves the details of a specific order.
-      operationId: ShowOrder
-      parameters:
-        - $ref: "#/components/parameters/IdParam"
-      responses:
-        "200":
-          description: Order details
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/OrderSuccessResponse"
-        "500":
-          description: Failed to retrieve orders
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-        "404":
-          description: Data not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-    put:
-      tags:
-        - Order
-      summary: Update an existing order
-      description: Updates the details of a specific order.
-      operationId: EditOrder
-      parameters:
-        - $ref: "#/components/parameters/IdParam"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/OrderUpdateInput"
-      responses:
-        "200":
-          description: Order updated
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/OrderSuccessResponse"
-        "500":
-          description: Failed to update order
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-  /cart:
+  # /order:
+  #   post:
+  #     tags:
+  #       - Order
+  #     summary: Add a new order
+  #     description: Adds a new order to the system.
+  #     operationId: AddOrder
+  #     requestBody:
+  #       required: true
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: "#/components/schemas/OrderCreateInput"
+  #     responses:
+  #       "201":
+  #         description: Order created
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/OrderSuccessResponse"
+  #       "500":
+  #         description: Failed to add order
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ErrorResponse"
+  #   get:
+  #     tags:
+  #       - Order
+  #     summary: List all orders
+  #     description: Retrieves a list of all orders.
+  #     parameters:
+  #       - $ref: "#/components/parameters/PageParam"
+  #       - $ref: "#/components/parameters/SizeParam"
+  #       - $ref: "#/components/parameters/OrderNumberParam"
+  #     operationId: ListOrders
+  #     responses:
+  #       "200":
+  #         description: All orders
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/OrderPaginateSuccessResponse"
+  #       "500":
+  #         description: Failed to retrieve orders
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ErrorResponse"
+  #       "404":
+  #         description: Data not found
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ErrorResponse"
+  # /order/{id}:
+  #   get:
+  #     tags:
+  #       - Order
+  #     summary: Detail an order
+  #     description: Retrieves the details of a specific order.
+  #     operationId: ShowOrder
+  #     parameters:
+  #       - $ref: "#/components/parameters/IdParam"
+  #     responses:
+  #       "200":
+  #         description: Order details
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/OrderSuccessResponse"
+  #       "500":
+  #         description: Failed to retrieve orders
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ErrorResponse"
+  #       "404":
+  #         description: Data not found
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ErrorResponse"
+  #   put:
+  #     tags:
+  #       - Order
+  #     summary: Update an existing order
+  #     description: Updates the details of a specific order.
+  #     operationId: EditOrder
+  #     parameters:
+  #       - $ref: "#/components/parameters/IdParam"
+  #     requestBody:
+  #       required: true
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: "#/components/schemas/OrderUpdateInput"
+  #     responses:
+  #       "200":
+  #         description: Order updated
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/OrderSuccessResponse"
+  #       "500":
+  #         description: Failed to update order
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ErrorResponse"
+  /cart/v1:
     post:
       # security:
       #   - BearerAuth: []
       tags:
         - Cart
-      summary: Add a new cart
-      description: Adds a new cart to the system.
+      summary: Add or edit a cart
+      description: Adds or edits a shopping cart.
       operationId: AddCart
       requestBody:
         required: true
@@ -146,6 +154,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/CartSuccessResponse"
+        "200":
+          description: Cart edited
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CartSuccessResponse"
         "500":
           description: Failed to add cart
           content:
@@ -156,8 +170,10 @@ paths:
       tags:
         - Cart
       summary: List all carts
-      security:
-        - BearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/OrderIdParam"
+      # security:
+      #   - BearerAuth: []
       description: |
         Retrieves a list of all shopping carts.
       operationId: ListCarts
@@ -180,29 +196,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-  /cart/{id}:
-    delete:
-      tags:
-        - Cart
-      summary: Remove a cart
-      description: |
-        Removes a cart from the system.
-      operationId: RemoveCart
-      parameters:
-        - $ref: "#/components/parameters/IdParam"
-      responses:
-        "204":
-          description: Removed
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CartSuccessResponse"
-        "500":
-          description: Failed to remove cart
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
 
 components:
   securitySchemes:
@@ -213,52 +206,61 @@ components:
       description: |
         Enter your **JWT Bearer Token** to authorize requests.  
         Example: `Authorization: Bearer <your-token>`
+    ApiKeyAuth:
+      type: apiKey
+      name: x-api-key
+      in: header
+      description: |
+        Enter your **API Key** to authorize requests.  
+        Example: `x-api-key: <your-api-key>`
+
   parameters:
-    IdParam:
-      name: id
-      in: path
+    # IdParam:
+    #   name: id
+    #   in: path
+    #   required: true
+    #   description: The ID of the data to remove
+    #   example: 1
+    #   style: form
+    #   schema:
+    #     type: integer
+    #     format: int32
+    OrderIdParam:
+      name: order_id
+      in: query
       required: true
-      description: The ID of the data to remove
+      description: The order id of the data to retrieve
       example: 1
       style: form
-      schema:
-        type: integer
-        format: int32
-    OrderNumberParam:
-      name: order_number
-      in: query
-      required: false
-      description: The order number of the data to remove
-      example: "ORD123456"
-      style: form
-      allowEmptyValue: true
+      allowEmptyValue: false
       schema:
         type: string
-        nullable: true
-    PageParam:
-      name: page
-      in: query
-      required: false
-      description: The page number to retrieve
-      example: 1
-      style: form
-      allowEmptyValue: true
-      schema:
-        type: integer
         format: int32
-        nullable: true
-    SizeParam:
-      name: size
-      in: query
-      required: false
-      description: The size of the data to retrieve
-      example: 10
-      style: form
-      allowEmptyValue: true
-      schema:
-        type: integer
-        format: int32
-        nullable: true
+        nullable: false
+    # PageParam:
+    #   name: page
+    #   in: query
+    #   required: false
+    #   description: The page number to retrieve
+    #   example: 1
+    #   style: form
+    #   allowEmptyValue: true
+    #   schema:
+    #     type: integer
+    #     format: int32
+    #     nullable: true
+    # SizeParam:
+    #   name: size
+    #   in: query
+    #   required: false
+    #   description: The size of the data to retrieve
+    #   example: 10
+    #   style: form
+    #   allowEmptyValue: true
+    #   schema:
+    #     type: integer
+    #     format: int32
+    #     nullable: true
   schemas:
     # Common Sections
     ErrorResponse:
@@ -303,76 +305,113 @@ components:
           description: Total number of pages
           example: 5
     # Order Sections
-    Order:
-      $ref: "./schemas/order/order.yaml"
-    OrderCreateInput:
-      $ref: "./schemas/order/create.yaml"
-    OrderUpdateInput:
-      $ref: "./schemas/order/update.yaml"
-    OrderSuccessResponse:
-      type: object
-      required: [data, message, code, status]
-      properties:
-        data:
-          type: object
-          description: Order item data
-          $ref: "#/components/schemas/Order"
-          example:
-            id: 1
-            order_number: "ORD123456"
-            discount: 10.5
-            status: "pending"
-            total: 150.75
-            created_at: "2023-10-01 12:00:00"
-            updated_at: "2023-10-01 12:00:00"
-        message:
-          type: string
-          description: Success message
-          example: "Order item list retrieved successfully"
-        code:
-          type: integer
-          description: Success code
-          example: 200
-        status:
-          type: string
-          description: Success status
-          example: "success"
-    OrderPaginateSuccessResponse:
-      type: object
-      required: [data, meta, message, code, status]
-      properties:
-        data:
-          type: array
-          description: List of order items
-          items:
-            $ref: "#/components/schemas/Order"
-          example:
-            - id: 1
-              order_number: "ORD123456"
-              discount: 10.5
-              status: "pending"
-              total: 150.75
-              created_at: "2023-10-01 12:00:00"
-              updated_at: "2023-10-01 12:00:00"
-        meta:
-          $ref: "#/components/schemas/MetaData"
-        message:
-          type: string
-          description: Success message
-          example: "Order items retrieved successfully"
-        code:
-          type: integer
-          description: Success code
-          example: 200
-        status:
-          type: string
-          description: Success status
-          example: "success"
+    # Order:
+    #   $ref: "./schemas/order/order.yaml"
+    # OrderCreateInput:
+    #   $ref: "./schemas/order/create.yaml"
+    # OrderUpdateInput:
+    #   $ref: "./schemas/order/update.yaml"
+    # OrderSuccessResponse:
+    #   type: object
+    #   required: [data, message, code, status]
+    #   properties:
+    #     data:
+    #       type: object
+    #       description: Order item data
+    #       $ref: "#/components/schemas/Order"
+    #       example:
+    #         id: 1
+    #         order_number: "ORD123456"
+    #         discount: 10.5
+    #         status: "pending"
+    #         total: 150.75
+    #         created_at: "2023-10-01 12:00:00"
+    #         updated_at: "2023-10-01 12:00:00"
+    #     message:
+    #       type: string
+    #       description: Success message
+    #       example: "Order item list retrieved successfully"
+    #     code:
+    #       type: integer
+    #       description: Success code
+    #       example: 200
+    #     status:
+    #       type: string
+    #       description: Success status
+    #       example: "success"
+    # OrderPaginateSuccessResponse:
+    #   type: object
+    #   required: [data, meta, message, code, status]
+    #   properties:
+    #     data:
+    #       type: array
+    #       description: List of order items
+    #       items:
+    #         $ref: "#/components/schemas/Order"
+    #       example:
+    #         - id: 1
+    #           order_number: "ORD123456"
+    #           discount: 10.5
+    #           status: "pending"
+    #           total: 150.75
+    #           created_at: "2023-10-01 12:00:00"
+    #           updated_at: "2023-10-01 12:00:00"
+    #     meta:
+    #       $ref: "#/components/schemas/MetaData"
+    #     message:
+    #       type: string
+    #       description: Success message
+    #       example: "Order items retrieved successfully"
+    #     code:
+    #       type: integer
+    #       description: Success code
+    #       example: 200
+    #     status:
+    #       type: string
+    #       description: Success status
+    #       example: "success"
     # Cart Sections
     CartCreateInput:
-      $ref: "./schemas/cart/create.yaml"
+      type: object
+      description: Create cart item model
+      required: [product_name, qty, price, order_id]
+      properties:
+        product_name:
+          type: string
+        qty:
+          type: integer
+          format: int32
+        price:
+          type: integer
+          format: float
+        order_id:
+          type: integer
+          format: int64
     Cart:
-      $ref: "./schemas/cart/cart.yaml"
+      type: object
+      description: Cart item model
+      required: [id, product_name, qty, price, order_id, created_at, updated_at, order_number]
+      properties:
+        id:
+          type: integer
+          format: int64
+        product_name:
+          type: string
+        qty:
+          type: integer
+          format: int32
+        price:
+          type: integer
+          format: float64
+        order_id:
+          type: integer
+          format: int64
+        created_at:
+          type: string
+        updated_at:
+          type: string
+        order_number:
+          type: string
     CartSuccessResponse:
       type: object
       required: [data, message, code, status]
@@ -385,7 +424,6 @@ components:
             id: 1
             product_name: "Sample Product"
             qty: 2
-            buyer: "John Doe"
             price: 100
             order_id: 123
             created_at: "2023-10-01 12:00:00"
@@ -415,11 +453,11 @@ components:
             - id: 1
               product_name: "Sample Product"
               qty: 2
-              buyer: "John Doe"
               price: 100
               order_id: 123
               created_at: "2023-10-01 12:00:00"
               updated_at: "2023-10-01 12:00:00"
+              order_number: "ORD123456"
         message:
           type: string
           description: Success message
