# internal/modules/order/domain/request.go
@@ -1,7 +1,0 @@
-package domain
-
-type PaginateRequest struct {
-	Limit       int32   `json:"limit"`
-	Offset      int32   `json:"offset"`
-	OrderNumber *string `json:"order_number,omitempty"`
-}
