# internal/modules/order/handler/interface.go
@@ -1,14 +1,9 @@
 package handler
 
-type OrderHandler interface {
-	// // Cart Sections
-	// ListCarts(c *fiber.Ctx) error
-	// AddCart(c *fiber.Ctx) error
-	// RemoveCart(c *fiber.Ctx, id api.IdParam) error
+import (
+	"github.com/gofiber/fiber/v2"
+)
 
-	// // Order Sections
-	// ListOrders(c *fiber.Ctx, params api.ListOrdersParams) error
-	// AddOrder(c *fiber.Ctx) error
-	// ShowOrder(c *fiber.Ctx, id api.IdParam) error
-	// EditOrder(c *fiber.Ctx, id api.IdParam) error
+type OrderHandler interface {
+	RegisterRoutes(r fiber.Router)
 }
